// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemRating /> should render with props 1`] = `
<ItemRating
  reviewsCount={3}
  value={2}
>
  <Box
    alignItems="center"
    direction="row"
    display="flex"
    marginTop={0}
  >
    <div
      className="display-flex direction-row align-items-center M-t__0"
    >
      <Rating
        value={2}
      >
        <div
          className="rating"
        >
          <Icon
            className="rating-star empty-star"
            icon={[Function]}
            inline={true}
            key="5"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star empty-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
          <Icon
            className="rating-star empty-star"
            icon={[Function]}
            inline={true}
            key="4"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star empty-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
          <Icon
            className="rating-star empty-star"
            icon={[Function]}
            inline={true}
            key="3"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star empty-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
          <Icon
            className="rating-star full-star"
            icon={[Function]}
            inline={true}
            key="2"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star full-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star full-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
          <Icon
            className="rating-star full-star"
            icon={[Function]}
            inline={true}
            key="1"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star full-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star full-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
        </div>
      </Rating>
      <Box
        dangerouslySetInlineStyle={
          Object {
            "__style": Object {
              "paddingBottom": "2px",
            },
          }
        }
        marginLeft={2}
      >
        <div
          className="M-l__2"
          style={
            Object {
              "paddingBottom": "2px",
            }
          }
        >
          <Memo(Text)
            color="gray38"
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              3
            </span>
          </Memo(Text)>
        </div>
      </Box>
    </div>
  </Box>
</ItemRating>
`;

exports[`<ItemRating /> should render without props 1`] = `
<ItemRating>
  <Box
    alignItems="center"
    direction="row"
    display="flex"
    marginTop={0}
  >
    <div
      className="display-flex direction-row align-items-center M-t__0"
    >
      <Rating
        value={0}
      >
        <div
          className="rating"
        >
          <Icon
            className="rating-star empty-star"
            icon={[Function]}
            inline={true}
            key="5"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star empty-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
          <Icon
            className="rating-star empty-star"
            icon={[Function]}
            inline={true}
            key="4"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star empty-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
          <Icon
            className="rating-star empty-star"
            icon={[Function]}
            inline={true}
            key="3"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star empty-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
          <Icon
            className="rating-star empty-star"
            icon={[Function]}
            inline={true}
            key="2"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star empty-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
          <Icon
            className="rating-star empty-star"
            icon={[Function]}
            inline={true}
            key="1"
            onClick={[Function]}
            size={16}
          >
            <star
              className="icon rating-star empty-star"
              height={16}
              onClick={[Function]}
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <svg
                className="icon rating-star empty-star"
                height={16}
                onClick={[Function]}
                viewBox="0 0 36 36"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.77 32.446l9.228-5.793 9.224 5.793a.901.901 0 0 0 1.351-.983L25.915 20.9l8.36-6.984a.9.9 0 0 0-.516-1.59l-10.87-.735-4.058-10.11a.9.9 0 0 0-1.67 0l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
                <path
                  d="M8.77 32.446l9.228-5.793L17.996.916a.9.9 0 0 0-.835.564l-4.06 10.11-10.868.735a.9.9 0 0 0-.516 1.59l8.36 6.984-2.658 10.564a.9.9 0 0 0 1.351.983z"
                />
              </svg>
            </star>
          </Icon>
        </div>
      </Rating>
    </div>
  </Box>
</ItemRating>
`;
